methods.basics.Methods.scala.error
Erreur de compilation :
Methods:10: error: value pas is not a member of Int
  for (i <- 1 pas){
              ^